2013-11-20  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/setup/offline_update.php: Fixed an error with
	the percentage of the install process.

2013-11-20  Dario Rodriguez <dario@artica.es>

	* include/styles/integria.css,
	include/styles/calendar.css,
	include/functions_calendar.php: Fixed several bugs
	related to style and colors of calendar.

2013-11-20  Dario Rodriguez <dario@artica.es>

	* include/styles/integria.css,
	operation/invoices/invoice_detail.php: Fixed a bug
	with invoice search form.

2013-11-20  Dario Rodriguez <dario@artica.es>

	* include/styles/integria.css,
	operation/campaign/campaign_stats.php: Fixed a style
	bug related on campaign report.

2013-11-20  Sancho Lerena <slerena@artica.es>

	* build_deb.sh: Fixed script.

2013-11-18  Dario Rodriguez <dario@artica.es>

	* include/styles/integria.css,
	include/styles/integria_clean.css,
	operation/projects/project_report.php,
	operation/projects/project_detail.php: Fixed some
	bugs related to project view and project report.

2013-11-18  Dario Rodriguez <dario@artica.es>

	* include/functions_incidents.php: Fixed a problem
	with Top 5 incident graph visualization.

2013-11-18  Dario Rodriguez <dario@artica.es>

	*  operation/incidents/incident_statistics.php,
 	operation/projects/project_report.php: Removed html
	reports from incidents and project views.

2013-11-18  Dario Rodriguez <dario@artica.es>

	* include/styles/integria_clean.css,
	include/functions_incidents.php,
	operation/reporting/incidents_html.php: Fixed several
	style bugs on pdf reports and improved information
	shown in these reports.

2013-11-18  Sancho Lerena <slerena@artica.es>

	* DEBIAN/control,
	include/config_process.php,
	integria.centos.spec,
	integria.spec,
        integria_dbdata.sql,
        extras/build_rpm.sh,
        extras/build_vars.sh: Updated version and package
	creation scripts.

2013-11-18  Dario Rodriguez <dario@artica.es>

	* include/styles/integria_clean.css,